syntax = "proto3";

package attestation_agent;

// Extend the dynamic/runtime measurement with given materials. This would change the state
// of current TEE's status, e.g. TDX's RTMR, (v)TPM's PCR, by adding a record in eventlog.
message ExtendRuntimeMeasurementRequest {
    // The domain to which this event entry belongs. This domain is used to distinguish the semantics of log entries in different contexts.
    string Domain = 1;

    // Concrete operation type that this event entry records.
    string Operation = 2;

    // Detailed content of the operation that this event entry records.
    string Content = 3;

    // Which PCR will be extended with the hash of this entry.
    optional uint64 RegisterIndex = 4;
}

message ExtendRuntimeMeasurementResponse {}

service AttestationAgentService {
    rpc ExtendRuntimeMeasurement(ExtendRuntimeMeasurementRequest) returns (ExtendRuntimeMeasurementResponse) {};
}
